Updated scholarship info

--- a/forms.htm
+++ b/forms.htm
@@ -11,6 +11,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <!-- #BeginEditable "doctitle" -->
 <title>Forms</title>
+<style type="text/css">
+.style24 {
+font-size:large;
+	color: #000080;
+}
+</style>
 <!-- #EndEditable -->
 <link rel="stylesheet" type="text/css" href="sms.css">
 <style type="text/css">
@@ -82,27 +88,36 @@
 			
 			
 			<h2 align="center">Forms</h2>
-			<p align="center"><span class="style1">2012-13</span></p>
+			<p align="center"><span class="style1">2014</span></p>
 			<p align="center">
-			<a target="_blank" href="https://docs.google.com/file/d/0B_TDLMsY9LIUc20xQUI1X29LcWs/edit">
-			Banquet Info/RSVP</a><br>
+			<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwYjJfSW0tR3E3NjFHSTZSYkt1ZC1rbUJyRVVB/edit?usp=sharing">
+			Banquet Info/RSVP</a>
+			
+		<!--	<br>
 			<a target="_blank" href="Forms/2013/PhysForm1213.pdf">Physical Form</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"><br>
 			<a target="_blank" href="Forms/2013/Concussion%20Info%20Release%20Form-%20SMSD-%20Updated%20for%2012-13%20SY.PDF">
 			Concussion Info Release</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"><br>
 			<a target="_blank" href="Forms/2013/'12-'13%20Athletic%20Participation%20Packet.pdf">
 			Athletic Participation Packet</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"></p>
-			<hr width="300px" style="color:green">
+			--><hr width="300px" style="color:green">
 			<p align="center" >
-			<a target="_blank" href="Documents/SMS%20Track%20and%20Field%20Scholarship%20Application.pdf">
-			SMS track and field scholarship application</a> <img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"> 
-			<a href="Documents/SMS%20Track%20and%20Field%20Scholarship%20Application.doc">
-			Word</a>
-			<img alt="Word Doc" src="images/word.gif" width="16" height="16"></p>
+			<span class="style1m">Booster Club Scholarship</span><br>
+
+			<a target="_blank" href="https://docs.google.com/document/d/1U7aMGDVylAHFQv66YQ3dmaLvzGnCFRrhv4ESEuqGM9M/edit?usp=sharing">
+			Information</a>  
+			<br>
+			<a target="_blank" href="https://docs.google.com/document/d/1HwxNUoTLLDlZnSKUK7-1SRUhBudneRWOo-67YBHb_W0/edit?usp=sharing">
+			Application</a>  
+            </p>
 			<p align="center" >
-			<span class="style1m">Merlin Gish scholarship </span><br>
+			<span class="style1m">Merlin Gish Scholarship </span><br>
 			<a target="_blank" href="Documents/2012/Gish%20Scholarship%20Cover%20Sheet.pdf">
 			Information</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"><br>
-			<a href="Documents/2012/GISH%20SCHOLARSHIP%20APPLICATION.pdf">A</a><a target="_blank" href="Documents/2012/GISH%20SCHOLARSHIP%20APPLICATION.pdf">pplication</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"><br>
+			<a href="Documents/2012/GISH%20SCHOLARSHIP%20APPLICATION.pdf">A</a><a target="_blank" href="Documents/2012/GISH%20SCHOLARSHIP%20APPLICATION.pdf">pplication</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"></p>
+			<p align="center" >
+			<span class="style24">Athnet Sports Recruiting Scholarship</span><br>
+			<a target="_blank" href="http://www.athleticscholarships.net/scholarship-contest.htm">
+			Link</a><br>
 			</p>
 			
 			</div>
