--- a/throws/formchart.htm
+++ b/throws/formchart.htm
@@ -61,9 +61,9 @@
 			<!-- MSCellType="ContentBody" -->
 			<p align="center">&nbsp;</p>
 			<h2 align="center">2014 </h2>
-			<h2 align="center">Form Chart (Top 10)</h2>
+			<h2 align="center">Form Chart</h2>
 			
-			<iframe style="margin:0 auto; width:600px; height:231px; text-align:center;" src="https://docs.google.com/spreadsheets/d/1cs12e2H2S888V_wjbb2Jh8tSpCUGdLy-xC15-LLG-Ow/pubhtml?widget=false&amp;headers=false"></iframe>
+			<iframe width="600px" height="400px" src="https://docs.google.com/spreadsheets/d/1ilVfV524CD1FbP6nyrvN8d23vbd4DbNlhfG9dBm70Nk/pubhtml?widget=true&amp;headers=false"></iframe>
 			</td>
 			<td height="273"></td>
 		</tr>
