--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -66,7 +66,9 @@
 			<p align="center" class="style15">
 			<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwVnROOXBHWE5KQTg&usp=sharing">South Relays</a><p align="center" class="style15">
 			<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBweVduYS1ub0JCMEU&amp;usp=sharing">
-			Seaman Relays</a><p class="style25">&nbsp;</p>
+			Seaman Relays</a><p align="center" class="style15">
+			<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwRG9ydHRYMXVFTDQ&amp;usp=sharing">
+			North Relays</a><p class="style25">&nbsp;</p>
 			<p class="style25"><span class="style17">[<a class="style1m" target="_blank" href="video%20links.htm">Selected YouTube Videos</a>]</span></p>
 			<p class="style25"><a target="_blank" href="video_archives.htm">
 			Archives</a></p>
