--- a/forms.htm
+++ b/forms.htm
@@ -26,7 +26,7 @@ font-size:large;
 </style>
 </head>
 
-<body onload="start()">
+<body>
 
 <div style="margin:0 auto;max-width:1250px">
 <div style="width:100%">
