--- a/records/girlsrecords.htm
+++ b/records/girlsrecords.htm
@@ -10,6 +10,7 @@
 <meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <!-- #BeginEditable "doctitle" -->
+<meta http-equiv="refresh" content="0; url=http://www.smstrack.org/archives/toptenalltimegirls.htm">
 <title>Girls Varsity Records</title>
 <link rel="stylesheet" type="text/css" href="/css/records.css">
 <!-- #EndEditable -->
