--- a/records/smsrelaysboys.htm
+++ b/records/smsrelaysboys.htm
@@ -10,7 +10,7 @@
 <meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <!-- #BeginEditable "doctitle" -->
-<title>Shawnee Mission South Relays Records Boys</title>
+<title>Boys South Relays Records</title>
 <link rel="stylesheet" type="text/css" href="/css/records.css">
 <!-- #EndEditable -->
 <link rel="stylesheet" type="text/css" href="../sms.css">
