--- a/records/boysrecords.htm
+++ b/records/boysrecords.htm
@@ -10,6 +10,7 @@
 <meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <!-- #BeginEditable "doctitle" -->
+<meta http-equiv="refresh" content="0; url=http://www.smstrack.org/archives/toptenalltimeboys.htm">
 <title>Boys Varsity Records</title>
 <style type="text/css">
 .style19 {
