--- a/Documents/Raven Relays 2010.htm
+++ b/Documents/Raven Relays 2010.htm
@@ -56,7 +56,7 @@
 </v:shape><![endif]--><![if !vml]><![endif]>
 <span style="font-family: &quot;Tahoma&quot;,&quot;sans-serif&quot;"><o:p>&nbsp;<span class="style1">Olathe 
 NW Raven Relays</span></o:p></span></p>
-<br style="mso-ignore: vglayout" clear="ALL" />
+<br style="mso-ignore: vglayout" clear="all" />
 <p class="MsoNormal" align="center" style="text-align: center">
 <b style="mso-bidi-font-weight: normal">
 <span style="font-size: 16.0pt; font-family: &quot;Tahoma&quot;,&quot;sans-serif&quot;">
