--- a/schedule.htm
+++ b/schedule.htm
@@ -28,6 +28,7 @@
 <script src="http://www.google.com/jsapi"></script>
 
 <script src="js/gcal.js"></script>
+<script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
 <script src="js/sched.js"></script>
 <script>
 $(document).ready(function()
