CC href on links page and Google webmaster page

--- a/links.htm
+++ b/links.htm
@@ -192,7 +192,7 @@ Links</font></b></h2>
 
 
 
-    <p align="left"><a target="_blank" href="http://www.smsxc.org" class="style1">Cross Country</a></p></td>
+    <p align="left"><a target="_blank" href="http://smsxc.wordpress.com/" class="style1">Cross Country</a></p></td>
     </tr>
 
 
