Updated coaches.htm for 2015

--- a/coaches.htm
+++ b/coaches.htm
@@ -75,16 +75,14 @@
 
 <p>&nbsp;</p>
 
-<h3 align="center" class="style1h">2014 Coaches</h3>
+<h3 align="center" class="style1h">2015 Coaches</h3>
 
 <div align="center">
 		<table height="605" border="0" id="table3">
 			<tbody>
 				<tr>
-					<td><b class="style1">J. J. Wannamaker</b> - (Head Coach, Head XC Coach)</td>
-				</tr>
-				<tr>
-					<td>Sprints, High Jump</td>
+					<td><b class="style1">J. J. Wannamaker</b> - (Head Coach, Horizontal 
+					Jumps)</td>
 				</tr>
 				<tr>
 					<td>(913) 993-7594</td>
@@ -119,6 +117,13 @@
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
+					<td><b class="style1">Luke Catloth</b> - (Sprints, Relays)</td>
+				</tr>
+				<tr><td><a class="slink" href="mailto:lcatloth@gus.pittstate.edu">lcatloth@gus.pittstate.edu</a></td></tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
 					<td><b class="style1">J.J. DeMaria</b> - (Javelin)</td>
 				</tr>
 				<tr>
@@ -138,21 +143,17 @@
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td><b class="style1">Mike Naster</b> - (Sprints)</td>
+					<td><b class="style1">Suni Haberland</b> - (High Jump, JV Sprints)</td>
 				</tr>
 				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				<tr>
-					<td><b class="style1">Aaron Sawyer</b> - (Horizontal Jumps)</td>
+					<td><a class="slink" href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
 					<td><b class="style1">Jonathan </b><span class="style1"><b
-							class="style1"> Wiebe</b></span> - (Distance) &amp; Asst. Cross
-						Country</td>
+							class="style1"> Wiebe</b></span> - (Distance)</td>
 				</tr>
 				<tr>
 					<td>(913) 993-0674</td>
@@ -168,7 +169,7 @@
 
 								<p style="margin-bottom: 0;"><font size="2">
 
-	<!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->08 Jun 2014<!--webbot bot="Timestamp" i-checksum="15074" endspan --></font>
+	<!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->25 Jan 2015<!--webbot bot="Timestamp" i-checksum="14754" endspan --></font>
 
 </div>
 
