Spirit wear/GTM store

--- a/forms.htm
+++ b/forms.htm
@@ -88,18 +88,11 @@ font-size:large;
 			
 			
 			<h2 align="center">Forms</h2>
-			<p align="center"><span class="style1">2014</span></p>
+			<p align="center"><span class="style1">2015</span></p>
 			<p align="center">
-			<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwYjJfSW0tR3E3NjFHSTZSYkt1ZC1rbUJyRVVB/edit?usp=sharing">
-			Banquet Info/RSVP</a>
-			
-		<!--	<br>
-			<a target="_blank" href="Forms/2013/PhysForm1213.pdf">Physical Form</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"><br>
-			<a target="_blank" href="Forms/2013/Concussion%20Info%20Release%20Form-%20SMSD-%20Updated%20for%2012-13%20SY.PDF">
-			Concussion Info Release</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"><br>
-			<a target="_blank" href="Forms/2013/'12-'13%20Athletic%20Participation%20Packet.pdf">
-			Athletic Participation Packet</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"></p>
-			--><hr width="300px" style="color:green">
+			<a target="_blank" href="https://docs.google.com/drawings/d/18R0vFLim1X3SZnU7D390QTIVm6eiuoNpJmSsRZ4glAw/edit?usp=sharing">
+			Spirit Wear</a>&nbsp; (<a target="_blank" href="https://docs.google.com/document/d/1-fmX1Px9T75Tsj90tsRZP0T5eaZv_K0M6syda-QKCjY/edit?usp=sharing">Order 
+			Form</a>)<hr width="300px" style="color:green">
 			<p align="center" >
 			<span class="style1m">Booster Club Scholarship</span><br>
 
