--- a/index.htm
+++ b/index.htm
@@ -251,10 +251,10 @@
                             </td>
                         </tr>
 
-                        <tr style="display:none">
+                        <tr style="display:block">
                         <td class="style24">
                         <p><span class="style28">
-                        <a target="_blank" href="http://coachsassistant.gtmsportswear.com/smshstrack?lockerid=14537"><img title="Buy Now!" width="178px" border="0" src="/images/smstf.jpg"></a></span></p>
+                        <a target="_blank" href="http://coachsassistant.gtmsportswear.com/SMSTFXC?lockerid=18455"><img title="GTM Team Store" width="178px" border="0" src="/images/smstf.jpg"></a></span></p>
                         </td>
                         </tr>
                         <tr>
