--- a/index.htm
+++ b/index.htm
@@ -251,7 +251,7 @@
                             </td>
                         </tr>
 
-                        <tr style="display:block">
+                        <tr style="display:none">
                         <td class="style24">
                         <p><span class="style28">
                         <a target="_blank" href="http://coachsassistant.gtmsportswear.com/SMSTFXC?lockerid=18455"><img title="GTM Team Store" width="178px" border="0" src="/images/smstf.jpg"></a></span></p>
