--- a/south_relays.htm
+++ b/south_relays.htm
@@ -88,10 +88,9 @@ $(function () {
 			<p class="style1h">Shawnee Mission South Relays<br>2015</p>
 			<p class="style15">Saturday, April 4th</p>
 			<div style="margin:auto; display:none" id="defaultCountdown" ></div>
-	<p style="visibility:block" class="style15">
-			<a  target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwQWNPRXNDOVA2SGxUbDM3OTVrQUhKT3BweGlr/edit?usp=sharing">
-			2014 Results</a> </p>			
-
+			<p style="visibility:block" class="style15">
+			<a  target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwUXhFdXJpSkdMRXdUZWFxendEcFJHQmhvdTNV/view?usp=sharing">
+			Results</a> </p>			
 			<p class="style15">
 			<a target="_blank" href="records/smsrelaysboys.htm">Meet Records</a></p>
 		
