--- a/throws/videos2014.htm
+++ b/throws/videos2014.htm
@@ -45,7 +45,7 @@
 		<tr class="menubar">
 			<td><a href="index.htm">Throws Home</a></td>
 			<td><a href="formchart.htm">Form Chart</a></td>
-			<td><a href="videos.htm">Videos</a></td>
+			<td><a href="videos2014.htm">Videos</a></td>
 			<td><a href="links.htm">Links</a></td>
 			<td><a href="../team.htm">Team</a></td>
 			
@@ -62,10 +62,17 @@
 			<p>&nbsp;</p>
 <p align="center" class="style1h">&nbsp;Videos</p>
 			<p align="center" class="style1m">
-			2015&nbsp;</p>
+			2014&nbsp;</p>
 			<p align="center" class="style15">
-			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfno4Y2ZjOTBWVzJkYWxHSGVYTWpNTXJMWWdMNm5VN0YyYnhRQjZjeEYwcVk&usp=sharing">JCCC</a>
-			</p>
+			<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwVnROOXBHWE5KQTg&usp=sharing">South Relays</a><p align="center" class="style15">
+			<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBweVduYS1ub0JCMEU&amp;usp=sharing">
+			Seaman Relays</a><p align="center" class="style15">
+			<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwRG9ydHRYMXVFTDQ&amp;usp=sharing">
+			North Relays</a><p align="center" class="style15">
+			<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwWlBTd18tNF85V2c&amp;usp=sharing">
+			Regional</a><p align="center" class="style15">
+			<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwYVVQSGdhWGwtVHM&amp;usp=sharing">
+			State</a><p class="style25">&nbsp;</p>
 			<p class="style25"><span class="style17">[<a class="style1m" target="_blank" href="video%20links.htm">Selected YouTube Videos</a>]</span></p>
 			<p class="style25"><a target="_blank" href="video_archives.htm">
 			Archives</a></p>
