Removed Map text from schedule add KU throw videos

--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -64,6 +64,12 @@
 			<p align="center" class="style1m">
 			2015&nbsp;</p>
 			<p align="center" class="style15">
+			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfnEwUng0elVtOVZkemt3MHl6Q3o3UGd6SllTeVNrMnh4XzB5WnZJdUlzQkE&usp=sharing">KU Relays</a>
+			</p>
+			<p align="center" class="style15">
+			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfkdFZ04tdlktY1JhUDNTcXBONWJkMUJ6T09kWVZyOWdJRFRNa0F6aHFXQjQ&usp=sharing">South Relays</a>
+			</p>
+			<p align="center" class="style15">
 			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfno4Y2ZjOTBWVzJkYWxHSGVYTWpNTXJMWWdMNm5VN0YyYnhRQjZjeEYwcVk&usp=sharing">JCCC</a>
 			</p>
 			<p class="style25"><span class="style17">[<a class="style1m" target="_blank" href="video%20links.htm">Selected YouTube Videos</a>]</span></p>
