Removed sponsor and updated girs top ten

--- a/index.htm
+++ b/index.htm
@@ -218,8 +218,8 @@
                                 </div>  
                             </td>
                         </tr>
-                        <tr>
-                        <td class="style27">
+                        <tr style="display:none">
+                        <td class="style27" >
                         <p><span class="style28">
                         <a target="_blank" href="sponsors/index.htm">Visit Our Sponsors</a></span></p>
                         </td>
