--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -64,6 +64,15 @@
 			<p align="center" class="style1m">
 			2015&nbsp;</p>
 			<p align="center" class="style15">
+			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfnNuZkstU21pU2l1M2xVWnpERmU3YVk4dGtWU0MyLUJHQksyU1B0dlNFbHc&usp=sharing">Seaman Relays</a>
+			</p>
+			<p align="center" class="style15">
+			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwflR1V3A0cWx6R0d2SkF1QlViZlowYXdVaTFEb3N4a0N2ckVMMW5LNllkMzA&usp=sharing">Gardner</a>
+			</p>
+			<p align="center" class="style15">
+			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfkVORVBqQlVYeWZEWU1ocWJMcGJPUnBTVHZyczdZMFRwQXVhaUdEQ2hUY1k&usp=sharing">SMS JV</a>
+			</p>
+			<p align="center" class="style15">
 			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfnEwUng0elVtOVZkemt3MHl6Q3o3UGd6SllTeVNrMnh4XzB5WnZJdUlzQkE&usp=sharing">KU Relays</a>
 			</p>
 			<p align="center" class="style15">
