remove frontpage2.js

--- a/index.htm
+++ b/index.htm
@@ -146,8 +146,8 @@
 <script type="text/javascript">
 </script>
 <script src="http://www.google.com/jsapi"></script>
-<script src="js/schedfp2.js"></script>
-<script src="js/frontpage2.js"></script>
+<script src="js/schedfp.js"></script>
+<script src="js/frontpage.js"></script>
 <script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
 
 <!-- #EndEditable -->
