Change-Id: Ibf8fffe03bbe77e52ef5bd6d8f84cdd793e332c0

--- a/coaches.htm
+++ b/coaches.htm
@@ -75,7 +75,7 @@
 
 <p>&nbsp;</p>
 
-<h3 align="center" class="style1h">2015 Coaches</h3>
+<h3 align="center" class="style1h">2016 Coaches</h3>
 
 <div align="center">
 		<table height="605" border="0" id="table3">
@@ -91,9 +91,10 @@
 					<td><a class="slink" href="mailto:sowannam@smsd.org">sowannam@smsd.org</a></td>
 				</tr>
 				<tr>
-					<td><span class="style24"><strong>for updates</strong></span>: 
-					text @southtf to 913-800-4619 or email 
-					<a href="mailto:southtf@mail.remind101.com">southtf@mail.remind101.com</a></td>
+				<td>
+					<a href="https://twitter.com/SMSWannamaker" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @SMSWannamaker</a>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>				
+				</td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
@@ -129,6 +130,26 @@
 				<tr>
 					<td>&nbsp;</td>
 				</tr>
+                <tr>
+                    <td><b class="style1">Suni Haberland</b> - (High Jump, JV Sprints)</td>
+                </tr>
+                <tr>
+                    <td><a class="slink" href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></td>
+                </tr>
+                <tr>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td><b class="style1">D.J. Hilding</b><span class="style1"><b
+                            class="style1"></b></span> - (Distance)</td>
+                </tr>
+                <tr>
+                    <td>(913) 993-0633</td>
+                </tr>
+                <tr>
+                    <td><a class="slink" href="mailto:dennishilding@smsd.org">dennishilding@smsd.org</a></td>
+                </tr>
+                <tr><td>nbsp</td></tr>
 				<tr>
 					<td><b class="style1">Clint Johnson</b> - (Discus,	Shot)</td>
 				</tr>
@@ -142,26 +163,6 @@
 				<tr>
 					<td>&nbsp;</td>
 				</tr>
-				<tr>
-					<td><b class="style1">Suni Haberland</b> - (High Jump, JV Sprints)</td>
-				</tr>
-				<tr>
-					<td><a class="slink" href="mailto:sunihaberland@smsd.org">sunihaberland@smsd.org</a></td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				<tr>
-					<td><b class="style1">Jonathan </b><span class="style1"><b
-							class="style1"> Wiebe</b></span> - (Distance)</td>
-				</tr>
-				<tr>
-					<td>(913) 993-0674</td>
-				</tr>
-				<tr>
-					<td><a class="slink" href="mailto:sorios@smsd.org">jonathanwiebe@smsd.org</a></td>
-				</tr>
-				<tr><td></td></tr>
 			</tbody>
 		</table>
 
@@ -169,7 +170,7 @@
 
 								<p style="margin-bottom: 0;"><font size="2">
 
-	<!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->25 Jan 2015<!--webbot bot="Timestamp" i-checksum="14754" endspan --></font>
+	<!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->27 Feb 2016<!--webbot bot="Timestamp" i-checksum="14754" endspan --></font>
 
 </div>
 
