Change-Id: I76c07fd626dc1f9cc4e81a9e12a19125fbbb8fdb

--- a/coaches.htm
+++ b/coaches.htm
@@ -149,7 +149,7 @@
                 <tr>
                     <td><a class="slink" href="mailto:dennishilding@smsd.org">dennishilding@smsd.org</a></td>
                 </tr>
-                <tr><td>nbsp</td></tr>
+                <tr><td>&nbsp;</td></tr>
 				<tr>
 					<td><b class="style1">Clint Johnson</b> - (Discus,	Shot)</td>
 				</tr>
