Change-Id: Ia7d04437c7478bab2032fb99a7973509a49d0c18

--- a/index.htm
+++ b/index.htm
@@ -251,12 +251,18 @@
                             </td>
                         </tr>
 
-                        <tr style="display:none">
-                        <td class="style24">
-                        <p><span class="style28">
-                        <a target="_blank" href="http://coachsassistant.gtmsportswear.com/SMSTFXC?lockerid=18455"><img title="GTM Team Store" width="178px" border="0" src="/images/smstf.jpg"></a></span></p>
-                        </td>
-                        </tr>
+                        <tr style="display:block" >
+                            <td class="style24"  style="background: #009843;">
+                                <span class="style28">
+                                 <a target="_blank" href="https://store.thegraphicedge.com/eFlyer/main.asp?stid=shawneetf"><img title="Team Store" width="178px" border="0" src="https://store.thegraphicedge.com/eFlyer/items/968228/Banner.jpg"></a>
+                                </span>
+                                <br>
+                                <span >
+                                    <span class="style28">
+                                        <a target="_blank" href="https://store.thegraphicedge.com/eFlyer/main.asp?stid=shawneetf">Team Store</a>
+                                    </span>
+                                </span>
+                            </td>
                         <tr>
                             <td cellpadding="0" cellspacing="0" valign="top">
                             <div id="wx_module_1246">
@@ -267,13 +273,6 @@
                             </script>
                             </td>
                         </tr>
-                        <tr>
-                        <td class="style72">
-                        <p><span class="style82">
-                        <a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwYV9mNHZMSGdyekxPYVJsbWtmZU5JMTQ5NFow/edit?usp=sharing">Click For Text Updates</a></span></p>
-                        </td>
-                        </tr>
-                        
                     </table>
                     </td>
                 </tr>
