Change-Id: I83e739e75025be561d5b1e7cc4f974b2cb6c2a16

--- a/guidelines.htm
+++ b/guidelines.htm
@@ -73,7 +73,7 @@
 			    <td><a href="forms.htm">Forms</a></td>
 		        <td><a href="roster.htm">Roster</a></td>
 			    <td><a href="throws/index.htm">Shot/Disc</a></td>
-		        <td><a href="http://coachsassistant.gtmsportswear.com/smshstrack?lockerid=14537" target="_blank">SMSTF Team Gear</a></td>
+		        <td><a href="https://store.thegraphicedge.com/eFlyer/main.asp?stid=shawneetf" target="_blank">SMSTF Team Gear</a></td>
 			  </tr>
 			</table>
 			</div>
