--- a/indextest.htm
+++ b/indextest.htm
@@ -224,7 +224,7 @@
 						<tr>
 						<td class="style24">
 						<p><span class="style28">
-						<a target="_blank" href="http://coachsassistant.gtmsportswear.com/smshstrack?lockerid=14537"><img title="Buy Now!" width="178px" border="0" src="/images/smstf.jpg"></a></span></p>
+						<a target="_blank" href="https://store.thegraphicedge.com/eFlyer/main.asp?stid=shawneetf"><img title="Buy Now!" width="178px" border="0" src="/images/smstf.jpg"></a></span></p>
 						</td>
 						</tr>
 						<tr>
