--- a/coaches.htm
+++ b/coaches.htm
@@ -128,6 +128,9 @@
 					<td><b class="style1">J.J. DeMaria</b> - (Javelin)</td>
 				</tr>
 				<tr>
+                    <td><a class="slink" href="mailto:jasperdemaria@gmail.com">jasperdemaria@gmail.com</a></td>
+				</tr>
+				<tr>
 					<td>&nbsp;</td>
 				</tr>
                 <tr>
