Added schedule link

--- a/south_relays.htm
+++ b/south_relays.htm
@@ -88,6 +88,9 @@ $(function () {
 			<p class="style1h">Shawnee Mission South Relays<br>2016</p>
 			<p class="style15">Saturday, April 2nd</p>
 			<div style="margin:auto; display:none" id="defaultCountdown" ></div>
+			<p style="display:block" class="style15">
+			<a  target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwQXNvVmE4cnROVWQ4RzNZOGRMbzhoMGRGbGpV/view?usp=sharing">
+			Schedule</a> </p>			
 			<p style="display:none" class="style15">
 			<a  target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwUXhFdXJpSkdMRXdUZWFxendEcFJHQmhvdTNV/view?usp=sharing">
 			Results</a> </p>			
