--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -62,28 +62,11 @@
 			<p>&nbsp;</p>
 <p align="center" class="style1h">&nbsp;Videos</p>
 			<p align="center" class="style1m">
-			2015&nbsp;</p>
+			2016&nbsp;</p>
 			<p align="center" class="style15">
-			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfkRvS2pNREFGWUdXTWlKdWk3OGZJdjRxdmgxT3Z3RmhJeDU3WFZzQUROcUk&usp=sharing">League</a>
+			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwWHAtWGxXbjgxX3c&usp=sharing">Spring Break Practice</a>
 			</p>
-			<p align="center" class="style15">
-			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfnNuZkstU21pU2l1M2xVWnpERmU3YVk4dGtWU0MyLUJHQksyU1B0dlNFbHc&usp=sharing">Seaman Relays</a>
-			</p>
-			<p align="center" class="style15">
-			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwflR1V3A0cWx6R0d2SkF1QlViZlowYXdVaTFEb3N4a0N2ckVMMW5LNllkMzA&usp=sharing">Gardner</a>
-			</p>
-			<p align="center" class="style15">
-			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfkVORVBqQlVYeWZEWU1ocWJMcGJPUnBTVHZyczdZMFRwQXVhaUdEQ2hUY1k&usp=sharing">SMS JV</a>
-			</p>
-			<p align="center" class="style15">
-			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfnEwUng0elVtOVZkemt3MHl6Q3o3UGd6SllTeVNrMnh4XzB5WnZJdUlzQkE&usp=sharing">KU Relays</a>
-			</p>
-			<p align="center" class="style15">
-			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfkdFZ04tdlktY1JhUDNTcXBONWJkMUJ6T09kWVZyOWdJRFRNa0F6aHFXQjQ&usp=sharing">South Relays</a>
-			</p>
-			<p align="center" class="style15">
-			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwfno4Y2ZjOTBWVzJkYWxHSGVYTWpNTXJMWWdMNm5VN0YyYnhRQjZjeEYwcVk&usp=sharing">JCCC</a>
-			</p>
+
 			<p class="style25"><span class="style17">[<a class="style1m" target="_blank" href="video%20links.htm">Selected YouTube Videos</a>]</span></p>
 			<p class="style25"><a target="_blank" href="video_archives.htm">
 			Archives</a></p>
