Added PayPal donate

--- a/index.htm
+++ b/index.htm
@@ -219,17 +219,21 @@
                             </td>
                         </tr>
                         <tr style="display:none">
-                        <td class="style27" >
-                        <p><span class="style28">
-                        <a target="_blank" href="sponsors/index.htm">Visit Our Sponsors</a></span></p>
-                        </td>
+                            <td class="style27" >
+                                <p><span class="style28">
+                                <a target="_blank" href="sponsors/index.htm">Visit Our Sponsors</a></span></p>
+                            </td>
                         </tr>
-                        <tr style="display:none">
-                        <td class="style72">
-                        <p><span class="style82">
-                        <a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwYV9mNHZMSGdyekxPYVJsbWtmZU5JMTQ5NFow/edit?usp=sharing">Click For Text Updates</a></span></p>
-                        </td>
-                        </tr>
+                        <tr style="display:block;" >
+                            <td width="180px"  style="background: #009843;">
+                                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+                                    <input type="hidden" name="cmd" value="_s-xclick">
+                                    <input type="hidden" name="hosted_button_id" value="BZJGCCBHK6VV8">
+                                    <input type="image" width="180px" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                                </form>
+                            </td>
+                        <tr>
                     </table>
                     </td>
                     <td valign="top" align="center" style="height: 55px">
