Changed video page for throws

--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -61,10 +61,8 @@
 			<!-- #BeginEditable "content" -->
 			<p>&nbsp;</p>
 <p align="center" class="style1h">&nbsp;Videos</p>
-			<p align="center" class="style1m">
-			2016&nbsp;</p>
 			<p align="center" class="style15">
-			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwWHAtWGxXbjgxX3c&usp=sharing">Spring Break Practice</a>
+			         <a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwWEVpTE1qSzNxY0k&usp=sharing">2016</a>
 			</p>
 
 			<p class="style25"><span class="style17">[<a class="style1m" target="_blank" href="video%20links.htm">Selected YouTube Videos</a>]</span></p>
