--- a/throws/formchart.htm
+++ b/throws/formchart.htm
@@ -60,8 +60,10 @@
 			<td valign="top" width="100%">
 			<!-- MSCellType="ContentBody" -->
 			<p align="center">&nbsp;</p>
-			<h2 align="center">2015</h2>
 			<h2 align="center">Form Chart</h2>
+			<p>(PB)-personal best, (SB)-seasonal best</p>
+			
+			<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/1J30umoVcISBtJMH_FJAe5bgNI0p71Fz8Ne68Z-6L-uM/pubhtml?widget=true&amp;headers=false"></iframe>
 			
 			<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/1Z6lrbEM2hgOn6e4fsSFHjAWgluzS_q5L1z6A7-gF6Hw/pubhtml?widget=true&amp;headers=false"></iframe>
 			</td>
