Throws Form Chart Style Change

--- a/throws/formchart.htm
+++ b/throws/formchart.htm
@@ -61,7 +61,7 @@
 			<!-- MSCellType="ContentBody" -->
 			<p align="center">&nbsp;</p>
 			<h2 align="center">Form Chart</h2>
-			<p>(PB)-personal best, (SB)-seasonal best</p>
+			<p>(<span style="background-color: yellow">PB</span>)-Personal Best, (<span style="background-color: lime">SB</span>)-Seasonal Best</p>
 			
 			<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/1J30umoVcISBtJMH_FJAe5bgNI0p71Fz8Ne68Z-6L-uM/pubhtml?widget=true&amp;headers=false"></iframe>
 			
