Added coach Baylis

--- a/coaches.htm
+++ b/coaches.htm
@@ -106,6 +106,12 @@
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
+					<td><b class="style1">Demetrious Baylis</b> - (Horizontal Jumps)</td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
+				<tr>
 					<td><b class="style1">Maggie Butler</b> - (Hurdles)</td>
 				</tr>
 				<tr>
