--- a/forms.htm
+++ b/forms.htm
@@ -88,11 +88,13 @@ font-size:large;
 			
 			
 			<h2 align="center">Forms</h2>
-			<p align="center"><span class="style1">2015</span></p>
+			<p align="center"><span class="style1">2016</span></p>
+			<div style="display: none">
 			<p align="center">
 			<a target="_blank" href="https://docs.google.com/drawings/d/18R0vFLim1X3SZnU7D390QTIVm6eiuoNpJmSsRZ4glAw/edit?usp=sharing">
 			Spirit Wear</a>&nbsp; (<a target="_blank" href="https://docs.google.com/document/d/1-fmX1Px9T75Tsj90tsRZP0T5eaZv_K0M6syda-QKCjY/edit?usp=sharing">Order 
 			Form</a>)<hr width="300px" style="color:green">
+			</div>
 			<p align="center" >
 			<span class="style1m">Booster Club Scholarship</span><br>
 
@@ -104,9 +106,8 @@ font-size:large;
             </p>
 			<p align="center" >
 			<span class="style1m">Merlin Gish Scholarship </span><br>
-			<a target="_blank" href="Documents/2012/Gish%20Scholarship%20Cover%20Sheet.pdf">
-			Information</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"><br>
-			<a href="Documents/2012/GISH%20SCHOLARSHIP%20APPLICATION.pdf">A</a><a target="_blank" href="Documents/2012/GISH%20SCHOLARSHIP%20APPLICATION.pdf">pplication</a><img alt="PDF" src="images/pdficon_small.gif" width="17" height="17"></p>
+			<a target="_blank" href="https://drive.google.com/open?id=0B4e6HoJZumBwTEFtNjhyQ25VTkJQYXVZc00tWTJIcjBLT3Jr">
+			Information</a>
 			<p align="center" >
 			<span class="style24">Athnet Sports Recruiting Scholarship</span><br>
 			<a target="_blank" href="http://www.athleticscholarships.net/scholarship-contest.htm">
