All Sunflower league

--- a/honors2015.htm
+++ b/honors2015.htm
@@ -76,9 +76,9 @@
 <p>&nbsp;</p>
 
 <h1 align="center"><font size="5" class="style1h">
-			2016 Post-Season Honors<br>
+			2015 Post-Season Honors<br>
 </font></h1>
-				<table style="display:none" bordercolor="#2e4d47"  width="244" align="center" class="style56" style="display:none">
+				<table bordercolor="#2e4d47"  width="244" align="center" class="style56" style="display:none">
 					<tr>
 						<td  width="230" >
 						<h2 align="center" class="style1h" >All-Metro</h2>
@@ -93,7 +93,7 @@
 						Brooke Holmes - Triple Jump
 						</td>
 					</tr>
-				</table>
+					</table>
 			
 				<table style="display:block" bordercolor="#2e4d47"  width="244" align="center" class="style56" >
 					<tr>
@@ -104,37 +104,37 @@
 					</tr>
 					
 					<tr>
-						<td  width="230" align="center" class="style1m"><b>1st Team</b></td>
+						<td  width="230" align="center" class="style1m">
+						&nbsp; 2nd Team</td>
 					</tr>
 
 					<tr>
 						<td  width="230" align="center" >
-    					Quincie Fischer - <em>Discus</em><br>
-	   					Desirae Upton - <em>Shot</em><br>
+						Trent Flagler - <em>Discus</em><br>
+						Dalton Lewallen - <em>Shot</em><br>
+						Nicole Sanchez - <em>300 Hurdles</em><br>
+
+
 						</td>
-					</tr>
-					<tr><td>&nbsp;</td></tr>
-					<tr>
-						<td  width="230" align="center" class="style1m"><b>2nd Team</b></td>
 					</tr>
 
 					<tr>
 						<td  width="230" align="center" >
-						Kamau Kimaru - <em>Discus</em><br>
-						Danielle Reichart - <em>300 Hurdles</em><br>
-						Clara Sitas - <em>Discus</em><br>
-						</td>
+						&nbsp;</td>
 					</tr>
-					<tr><td>&nbsp;</td></tr>
+
 					<tr>
-						<td  width="230"align="center" class="style1m"><b>Honorable 	Mention</b></td>
+						<td  width="230"align="center" class="style1m">Honorable 
+						Mention 						</td>
 					</tr>
 					<tr>
 						<td  width="230" align="center">
-						Rakeya Martin - <em>Discus</em><br>
-						Kyheim Matthews - <em>Shot</em><br>
-						Clara Sitas - <em>Shot</em><br>
-                        </td>
+						<em>Boys 4x800</em><br>(Mitch Brock, Aidan Johnson<br>
+						Brandon Maxey, Sandis Simchuk)<br>Ned Bingaman - <em>Discus</em><br>Aidan Johnson - 
+						<em>800</em><br>Nicole Sanchez - <em>100 Hurdles</em><br>Clara Sitas - 
+						<em>Discus</em><br>
+						
+</td>
 					</tr>
 
 
