Added All-metro selecion

--- a/honors.htm
+++ b/honors.htm
@@ -78,19 +78,18 @@
 <h1 align="center"><font size="5" class="style1h">
 			2016 Post-Season Honors<br>
 </font></h1>
-				<table style="display:none" bordercolor="#2e4d47"  width="244" align="center" class="style56" style="display:none">
+				<table style="display:block" bordercolor="#2e4d47"  width="244" align="center" class="style56" style="display:none">
 					<tr>
 						<td  width="230" >
 						<h2 align="center" class="style1h" >All-Metro</h2>
 						</td>
 					</tr>
 					<tr>
-						<td  width="230"align="center" class="style1m">Honorable 
-						Mention 						</td>
+						<td  width="230"align="center" class="style1m"><b>Honorable 	Mention</b></td>
 					</tr>
 					<tr>
 						<td  width="230" align="center">
-						Brooke Holmes - Triple Jump
+						Danielle Reichart - <em>300 Hurdles</em>
 						</td>
 					</tr>
 				</table>
