Fixed broken links

--- a/throws/links.htm
+++ b/throws/links.htm
@@ -56,29 +56,17 @@
 			<!-- #BeginEditable "content" -->
 <p>&nbsp;</p>
 <h4 align="center" class="style1h">Links</h4>
-			<p align="center"><a href="http://www.dyestat.com/">DyeStat</a><br/>
-			National High School Track &amp; Field News and Stats</p>
-			<p align="center"><a href="http://www.macthrowvideo.com/">Mac Throw 
+			<p align="center"><a href="http://www.dyestat.com/" target="_blank">DyeStat</a><br/>	National High School Track&amp; Field News and Stats</p>
+			<p align="center"><a href="http://www.macthrowvideo.com/" target="_blank">Mac Throw 
 			Video</a><br/>
 			Lots of downloadable throwing videos</p>
-						<p align="center"><a href="http://www.throwfarther.org/">Throw 
-			Farther</a></p>
+			<p align="center"><a href="http://www.usatf.com/" target="_blank">USA Track &amp; Field</a></p>
 			<p align="center">
-			<a href="http://throwerspage.110mb.com/">Throwers Page</a></p>
-			<p align="center"><a href="http://www.usatf.com/">USA Track &amp; Field</a></p>
-			<p align="center">
-			<a href="http://www.trackandfieldnews.com/tfn/index.jsp">Track &amp; 
+			<a href="http://www.trackandfieldnews.com" target="_blank">Track &amp; 
 			Field News</a><br/>
 			&quot;The bible of the sport&quot;</p>
-			<p align="center"><a href="http://www.kansasaau.com/">Kansas AAU</a><br/>
-			Summer track schedules</p>
-			<p align="center"><a href="http://hovpen.rivals.com/">Hovpen</a><br/>
-			Kansas High School Sports</p>
-			<p align="center"><a href="http://www.eliteyouth.com/">Elite Youth</a><br/>
-			Age Group Track &amp; Field Lists</p>
 			<p align="center">
-			<a href="http://www.catchitkansas.com/sports/trackandfield/cik-carol-swensons-alltime-and-201-01242011,0,5189829.story">Carol Swenson's Lists</a><br/>
-			Links to current and all-time Kansas high school performance lists</p>
+			<a href="http://www.catchitkansas.com/sports/trackandfield" target="_blank">Catchit Kansas - Track</a></p>
 			<!-- #EndEditable --></td>
 			<td height="273"></td>
 		</tr>
