--- a/throws/links.htm
+++ b/throws/links.htm
@@ -55,6 +55,10 @@
 			<!-- MSCellType="ContentBody" -->
 			<!-- #BeginEditable "content" -->
 <p>&nbsp;</p>
+<h4 align="center" class="style1h">2016-17 Throws Camps and Clinics</h4>
+<div align="center"></div>
+<p>15-Oct-2016 - <a href="https://drive.google.com/file/d/0B4e6HoJZumBwZW5JZ0FtNmZHOWJjMjhYN3pUUGVsUVJ1TnNV/view?usp=sharing" target="_blank">Olympic Throws Clinic</a><br>
+<a href="https://drive.google.com/file/d/0B4e6HoJZumBweHl4aF8zazZrNFFrLXh0THd0Um44Zi1PdjdN/view?usp=sharing" target="_blank">Registration Form</a></p>
 <h4 align="center" class="style1h">Links</h4>
 			<p align="center"><a href="http://www.dyestat.com/" target="_blank">DyeStat</a><br/>	National High School Track&amp; Field News and Stats</p>
 			<p align="center"><a href="http://www.macthrowvideo.com/" target="_blank">Mac Throw 
