Schedule ans South Relays update

--- a/index.htm
+++ b/index.htm
@@ -214,7 +214,7 @@
                             <td >
                                 <div class="style36" >
                                     <span class="style34"><strong>South Relays</strong></span>
-                                    <span class="style35"><strong><br>Saturday<br>April 2nd<br>2016</strong></span>
+                                    <span class="style35"><strong><br>Saturday<br>April 1st<br>2017</strong></span>
                                 </div>  
                             </td>
                         </tr>
