--- a/south_relays.htm
+++ b/south_relays.htm
@@ -85,10 +85,11 @@ $(function () {
 			<td valign="top" width="100%">
 			<!-- MSCellType="ContentBody" -->
 			<!-- #BeginEditable "content" --><p>&nbsp;</p>
-			<p class="style1h">Shawnee Mission South Relays<br>2016</p>
-			<p class="style15">Saturday, April 2nd</p>
+			<p class="style1h">Shawnee Mission South Relays<br>2017</p>
+			<p class="style15">Saturday, April 1st</p>
+			<p class="style15"><em>Note: Due to construction all events will be held at SM North District Stadium</em></p>
 			<div style="margin:auto; display:none" id="defaultCountdown" ></div>
-			<p style="display:block" class="style15">
+			<p style="display:none" class="style15">
 			<a  target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwbFozSnBBSWNtbVBfd2JRSWc0bEdWVTliQktv/view?usp=sharing">
 			Results</a> </p>			
 			<p class="style15">
