--- a/index.htm
+++ b/index.htm
@@ -256,9 +256,9 @@
                         </tr>
 
                         <tr style="display:block" >
-                            <td class="style24"  style="background: #009843;">
+                            <td class="style24"  style="background: #2d2a25;">
                                 <span class="style28">
-                                 <a target="_blank" href="https://store.thegraphicedge.com/eFlyer/main.asp?stid=shawneetf"><img title="Team Store" width="178px" border="0" src="https://store.thegraphicedge.com/eFlyer/items/968228/Banner.jpg"></a>
+                                 <a target="_blank" href="http://eflyerorder.com/SOUTHTRACKFIELD17"><img title="Team Store" width="178px" border="0" src="https://store.thegraphicedge.com/eFlyer/items/1071304/Banner.jpg"></a>
                                 </span>
                                 <br>
                                 <span >
