--- a/coaches.htm
+++ b/coaches.htm
@@ -75,14 +75,13 @@
 
 <p>&nbsp;</p>
 
-<h3 align="center" class="style1h">2016 Coaches</h3>
+<h3 align="center" class="style1h">2017 Coaches</h3>
 
 <div align="center">
 		<table height="605" border="0" id="table3">
 			<tbody>
 				<tr>
-					<td><b class="style1">J. J. Wannamaker</b> - (Head Coach, Horizontal 
-					Jumps)</td>
+					<td><b class="style1">J. J. Wannamaker</b> - (Head Coach, Hurdles)</td>
 				</tr>
 				<tr>
 					<td>(913) 993-7594</td>
@@ -103,6 +102,9 @@
 					<td><b class="style1">Mike Alexander</b> - (Pole Vault)</td>
 				</tr>
 				<tr>
+					<td><a class="slink" href="mailto:malexander131@hotmail.com">malexander131@hotmail.com</a></td>
+				</tr>
+				<tr>
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
@@ -112,22 +114,10 @@
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td><b class="style1">Maggie Butler</b> - (Hurdles)</td>
+					<td><b class="style1">Aaron Dean</b> - (Javelin)</td>
 				</tr>
 				<tr>
-					<td>(913) 993-2453</td>
-				</tr>
-				<tr>
-					<td><a class="slink" href="mailto:brbutler@smsd.org">brbutler@smsd.org</a></td>
-				</tr>
-				<tr>
-					<td>&nbsp;</td>
-				</tr>
-				<tr>
-					<td><b class="style1">J.J. DeMaria</b> - (Javelin)</td>
-				</tr>
-				<tr>
-                    <td><a class="slink" href="mailto:jasperdemaria@gmail.com">jasperdemaria@gmail.com</a></td>
+                    <td><a class="slink" href="mailto:AaronDean@smsd.orgm">AaronDean@smsd.org</a></td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
@@ -165,6 +155,18 @@
 				<tr>
 					<td>&nbsp;</td>
 				</tr>
+				<tr>
+					<td><b class="style1">Robert Ray</b> - (Sprints)</td>
+				</tr>
+				<!--tr>
+					<td>(913) 993-2453</td>
+				</tr-->
+				<tr>
+					<td><a class="slink" href="mailto:RobertRay@smsd.org">RobertRay@smsd.org</a></td>
+				</tr>
+				<tr>
+					<td>&nbsp;</td>
+				</tr>
 			</tbody>
 		</table>
 
@@ -172,7 +174,7 @@
 
 								<p style="margin-bottom: 0;"><font size="2">
 
-	<!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->27 Feb 2016<!--webbot bot="Timestamp" i-checksum="14754" endspan --></font>
+	<!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->4 Feb 2017<!--webbot bot="Timestamp" i-checksum="14754" endspan --></font>
 
 </div>
 
