Twitter and menu in progress

--- a/links.htm
+++ b/links.htm
@@ -19,6 +19,7 @@
 	text-align: center;
 }
 </style>
+<script src="js/common.js"></script>
 </head>
 <body>
 	<div style="margin: 0 auto; max-width: 1250px">
